Fix tabs overflow on mobile

--- a/nexaas-app/app/assets/scss/layout/_header.scss
+++ b/nexaas-app/app/assets/scss/layout/_header.scss
@@ -19,16 +19,6 @@
   }
 }
 
-.ch-header-tabs {
-
-  &.ui.menu {
-    margin-top: 0;
-    padding: 5px 5px 0;
-    background-color: #fff;
-  }
-
-}
-
 .ch-header-nav {
   display: flex;
   justify-content: center;
